# GB

./: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  test.sh
include/gameboy/: gameboy.h
include/instruction/: 16bitop.h  bitop.h  bitshiftop.h  register_intruction.h
include/register/: register.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.c
src/gameboy/: CMakeLists.txt  Makefile  cmake_install.cmake  gameboy.c
src/instruction/: .register_intruction.c.swp  16bitop.c  CMakeLists.txt  bitop.c  bitshiftop.c  register_intruction.c
src/register/: CMakeLists.txt  register.c
testsuite/: .test.c.swp  CMakeLists.txt  Makefile  cmake_install.cmake  test.c
